update frontpage CSS to fix spacing issues on news/events/people blocks+

--- a/styles/front.css
+++ b/styles/front.css
@@ -207,7 +207,7 @@
 .feature .views-row,
 .feature .views-view-grid {
   font-size: 84.6%;
-  line-height: 1.18em;
+  line-height: 1em;
 
 }
 
