--- a/styles/news.css
+++ b/styles/news.css
@@ -210,7 +210,7 @@ img.imagefield-field_ascnews_image {
 .feature-large.view-id-News .attachment .views-row {
   width: 168px;
   border-bottom: 1px dotted #CCC;
-  margin: 0 10px 10px 0;
+  margin: 0 10px 6px 0;
   padding-bottom: 5px;
 }
 
